git-svn-id: svn://svn.code.sf.net/p/indysoap/code-0/trunk@11 75be9796-0ac5-4f83-a77f-cba69ea37c88

--- a/doco/OVR_LicenceBSD.htm
+++ b/doco/OVR_LicenceBSD.htm
@@ -8,8 +8,8 @@
 <H2>BSD License</H2>
 
 <b>Copyright</b><br>
-Portions of this software are Copyright (c) 1993 - 2002, Chad Z. Hower (Kudzu), Kestral Computing and 
-the Indy Soap Pit Crew - http://www.nevrona.com/Indy/Soap
+Portions of this software are Copyright (c) 1993 - 2002, Chad Z. Hower (Kudzu), Grahame Grieve and 
+the Indy Soap Pit Crew - http://www.indyproject.com/Soap
 <p>
 
 <b>License</b><br>
@@ -25,7 +25,7 @@ Redistributions in binary form must reproduce the above copyright notice, this l
 No personal names or organizations names associated with the Indy project may be used to endorse or promote products derived from this software without specific prior written permission of the specific individual or organization. 
 <p>
 
-THIS SOFTWARE IS PROVIDED BY Chad Z. Hower (Kudzu), Kestral, and the Indy Soap Pit Crew "AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+THIS SOFTWARE IS PROVIDED BY Chad Z. Hower (Kudzu), Grahame Grieve, and the Indy Soap Pit Crew "AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 <p>
 
 
