--- a/doco/OVR_Licence.htm
+++ b/doco/OVR_Licence.htm
@@ -19,7 +19,7 @@ To make it easier and consistent for JEDI users, we also offer an MPL license v1
 <p>
 Mozilla is the Open Source initiative formulated by Netscape for the next generation of their web browsers. Netscape states "We believe this license satisfies the Debian Free Software Guidelines which provide a commonly accepted definition of "free software," much like other free software licenses such as GPL or BSD." 
 <p>
-Project JEDI's implementation of the MPL allows developers to use its code in their applications ("Larger Work") regardless of whether the intended distribution will be in the public domain or as commercial applications, as long as the licence conditions are met. For a more detailed explanation, an annotated version of the MPL is available. 
+Project JEDI's implementation of the MPL allows developers to use its code in their applications ("Larger Work") regardless of whether the intended distribution will be in the public domain or as commercial applications, as long as the licence conditions are met. For a more detailed explanation, see <a href="http://www.mozilla.org/MPL/">http://www.mozilla.org/MPL/</a>. 
 
 
 </body>
